style: fix spacing in pomodorotab

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,36 +3,36 @@
 @tailwind utilities;
 @layer base {
   :root {
-    --background: 11 58% 95%;
-    --foreground: 204 25% 20%;
+    --background: 240, 5.9%, 90%;
+    --foreground: 204 25% 5%;
     --card: 255 13% 96%;
     --card-foreground: 255 13% 96%;
     --popover: 215 81% 6%;
-    --popover-foreground: 0 0% 10%;
+    --popover-foreground: 0 0% 15%;
     --primary: 185 100% 45%;
-    --primary-foreground: 209 100% 10%;
-    --secondary: 210 100% 47%;
-    --secondary-foreground: 0 0% 10%;
-    --muted: 230 15% 80%;
-    --muted-foreground: 0 0% 36%;
-    --accent: 230 7% 65%;
-    --accent-foreground: 230 1% 90%;
+    --primary-foreground: 209 100% 5%;
+    --secondary: 210 100% 43%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 0 0% 80%;
+    --muted-foreground: 0 0% 30%;
+    --accent: 240, 4.9%, 83.9%;
+    --accent-foreground: 240, 4.9%, 83.9%;
     --destructive: 1 80% 42%;
     --destructive-foreground: 130 100% 94%;
     --border: 0 0% 65%;
     --input: 0 0% 85%;
-    --ring: 0 0% 16.9%;
+    --ring: 0 0% 10%;
     --chart-1: 220 70% 60%;
     --chart-2: 160 60% 55%;
     --chart-3: 30 80% 65%;
     --chart-4: 280 65% 70%;
     --chart-5: 340 75% 65%;
-    --sidebar-background: 11 58% 95%;
-    --sidebar-foreground: 0 0% 36%;
+    --sidebar-background: 240, 5.9%, 90%;
+    --sidebar-foreground: 0 0% 30%;
     --sidebar-primary: 189 100% 45%;
     --sidebar-primary-foreground: 209 100% 10%;
     --sidebar-accent: 0 0% 10%;
-    --sidebar-accent-foreground: 0 0% 36%;
+    --sidebar-accent-foreground: 0 0% 30%;
     --sidebar-border: 240 3.7% 85%;
     --sidebar-ring: 217.2 91.2% 40.2%;
     --secondary-smooth-700: 224.3 76.3% 58%;
